# attractor

./: .gitignore  cli.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  environment.py  session.py  truncation.py
src/agent/tools/: __init__.py  core.py
src/attractor/: __init__.py  backends.py  conditions.py  context.py  engine.py  handlers.py  interviewer.py  parser.py  stylesheet.py  types.py  validator.py
src/llm/: __init__.py  catalog.py  client.py  types.py
src/llm/providers/: __init__.py  anthropic.py  gemini.py  openai.py
